# autogen-issue-resolver

./: .gitignore  README.md  docker-compose.yml
agts/: Dockerfile  README.md  agt.py  pyproject.toml
svc1/: Dockerfile  README.md  pyproject.toml  svc.py
svc2/: Dockerfile  README.md  svc.py
svc3/: Dockerfile  README.md  pyproject.toml  svc.py
web/: Dockerfile  README.md  package-lock.json  package.json  vue.config.js
web/src/: App.vue  main.js
