[project]
name = "autogen_issue_resolver_it_stud_io"
version = "0.0.1"
authors = [
  { name="Christian Mueller", email="christian.mueller@it-stud.io" },
]
description = "A prototype for an autogen based issue resolver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Flask>=2.2.2",
  "Flask[async]>=2.2.2",
  "Flask-RESTful>=0.3.9",
  "Werkzeug==2.2.2",
  "autogen-core>=0.4.7",
  "autogen-ext>=0.4.7",
  "autogen-agentchat>=0.4.7",
  "openai>=1.61.0",
  "requests>=2.32.3",
  "tiktoken>=0.8.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/it-stud-io/autogen-issue-resolver"
Issues = "https://github.com/it-stud-io/autogen-issue-resolver/issues"